[package]
name = "davincicode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
rand = "0.8.5"
colored = "2.1.0"
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.12", features = ["derive"] }
