[package]
name = "davincicode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# tui
[[bin]]
name = "client"
path = "src/tui/client.rs"

[[bin]]
name = "server"
path = "src/tui/server.rs"

# cli
[[bin]]
name = "client-cli"
path = "src/cli/client.rs"

[[bin]]
name = "server-cli"
path = "src/cli/server.rs"

[dependencies]
rand = "0.8.5"
colored = "2.1.0"
tokio = { version = "1.35.1", features = ["full"] }
ratatui = { version = "0.25.0", features = ["all-widgets"] }
crossterm = "0.27.0"
regex = "1.10.2"
clap = { version = "4.4.12", features = ["derive"] }
