[package]
name = "davincicode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# tui
[[bin]]
name = "client"
path = "src/tui/client.rs"

[[bin]]
name = "server"
path = "src/tui/server.rs"

# cli
[[bin]]
name = "client-cli"
path = "src/cli/client.rs"

[[bin]]
name = "server-cli"
path = "src/cli/server.rs"

[dependencies]
rand = "0.9.2"
colored = "3.0.0"
tokio = { version = "1.47.0", features = ["full"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.29.0"
regex = "1.11.1"
clap = { version = "4.5.41", features = ["derive"] }
